---
source: compiler-core/src/fsharp/tests/numbers.rs
assertion_line: 31
expression: "\npub fn main() {\n  let i = 100_000\n  let f = 100_000.00101\n  f\n}\n"
---
module rec my.``mod``
let main (): float = begin
    let i = 100_000
    let f = 100_000.00101
    f
end
